Fixed the spacing in about section

--- a/Animal_Catalog/src/styles/molecules/About.css
+++ b/Animal_Catalog/src/styles/molecules/About.css
@@ -6,6 +6,7 @@
     margin-top: 50px;
     margin-bottom: 50px;
     font-size: 20px;
+    gap: 50px;
 }
 
 .about-section-title{
