--- a/Animal_Catalog/src/styles/molecules/AnimalTypeMenu.css
+++ b/Animal_Catalog/src/styles/molecules/AnimalTypeMenu.css
@@ -12,6 +12,7 @@
     text-align: center;
     color: #2d3748; 
     margin-bottom: 2.5rem; 
+    margin-top: 120px;
 }
 
 .animal-type-menu-card-wrapper {
