--- a/Animal_Catalog/src/styles/organism/ContactUs.css
+++ b/Animal_Catalog/src/styles/organism/ContactUs.css
@@ -3,11 +3,13 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: #f1f1f1;
+	/* background-color: #f1f1f1; */
+
 }
 
 .contact-section-subtext{
     font-size: 1.5rem;
+    
 }
 
 .contact-section-form{
